--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '11'
       - name: Set Default Scheme
         run: |
